# fastapi-tts

./: .gitignore  README.md  main.py  pai-stt.py  pai-tts-bridge.py  pyproject.toml  requirements.txt
